{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 355,
  "lineage": "06e8dbe3-18ce-0477-808b-1108e14be5a8",
  "resources": [
    {
      "module": "module.jumpbox",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkInterfaces/jumpbox-nic",
            "internal_domain_name_suffix": "1kywsqg21fyuph0urixajpxayf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.9.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/publicIPAddresses/ntier-iaas-jumpbox-pip",
                "subnet_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-JumpboxSubnet"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-C3-70-01",
            "name": "jumpbox-nic",
            "private_ip_address": "10.9.0.4",
            "private_ip_addresses": [
              "10.9.0.4"
            ],
            "resource_group_name": "ntier-iaas-rg",
            "virtual_machine_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Compute/virtualMachines/ntier-iaas-jumpbox-vm"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.jumpbox.azurerm_public_ip.jumpbox_pip",
            "module.network.azurerm_subnet.jumpbox_subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.jumpbox",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jumpbox_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/publicIPAddresses/ntier-iaas-jumpbox-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.236.3.18",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "ntier-iaas-jumpbox-pip",
            "resource_group_name": "ntier-iaas-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancing",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_biz_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb/frontendIPConfigurations/ntier-iaasweb-biz-ipconfig",
                "inbound_nat_rules": [
                  "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb/inboundNatRules/SSH"
                ],
                "load_balancer_rules": [
                  "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb/loadBalancingRules/HTTP"
                ],
                "name": "ntier-iaasweb-biz-ipconfig",
                "private_ip_address": "10.9.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-WebSubnet"
              }
            ],
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb",
            "location": "westus2",
            "name": "ntier-iaasweb-biz-lb",
            "private_ip_address": "10.9.2.4",
            "private_ip_addresses": [
              "10.9.2.4"
            ],
            "resource_group_name": "ntier-iaas-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_subnet.web_subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancing",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_biz_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Compute/virtualMachineScaleSets/ntier-iaas-business-vmss/virtualMachines/1/networkInterfaces/business-vmss-nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb/backendAddressPools/bepool",
            "load_balancing_rules": [
              "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb/loadBalancingRules/HTTP"
            ],
            "loadbalancer_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb",
            "name": "bepool"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.load-balancing.azurerm_lb.web_biz_lb",
            "module.network.azurerm_subnet.web_subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancing",
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "web_biz_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb/frontendIPConfigurations/ntier-iaasweb-biz-ipconfig",
            "frontend_ip_configuration_name": "ntier-iaasweb-biz-ipconfig",
            "frontend_port": 22,
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb/inboundNatRules/SSH",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb",
            "name": "SSH",
            "protocol": "Tcp",
            "resource_group_name": "ntier-iaas-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.load-balancing.azurerm_lb.web_biz_lb",
            "module.network.azurerm_subnet.web_subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancing",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_biz_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb/probes/ssh-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb",
            "name": "ssh-running-probe",
            "number_of_probes": 2,
            "port": 22,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.load-balancing.azurerm_lb.web_biz_lb",
            "module.network.azurerm_subnet.web_subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancing",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_biz_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb/backendAddressPools/bepool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb/frontendIPConfigurations/ntier-iaasweb-biz-ipconfig",
            "frontend_ip_configuration_name": "ntier-iaasweb-biz-ipconfig",
            "frontend_port": 80,
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb/loadBalancingRules/HTTP",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/loadBalancers/ntier-iaasweb-biz-lb",
            "name": "HTTP",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.load-balancing.azurerm_lb.web_biz_lb",
            "module.load-balancing.azurerm_lb_backend_address_pool.web_biz_lb",
            "module.network.azurerm_subnet.web_subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "appgw_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-appgw-nsg",
            "location": "westus2",
            "name": "ntier-iaas-appgw-nsg",
            "resource_group_name": "ntier-iaas-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65200-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "65k-Allow",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "business_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-business-nsg",
            "location": "westus2",
            "name": "ntier-iaas-business-nsg",
            "resource_group_name": "ntier-iaas-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "data_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-data-nsg",
            "location": "westus2",
            "name": "ntier-iaas-data-nsg",
            "resource_group_name": "ntier-iaas-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jumpbox_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-jumpbox-nsg",
            "location": "westus2",
            "name": "ntier-iaas-jumpbox-nsg",
            "resource_group_name": "ntier-iaas-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH-Allow",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-web-nsg",
            "location": "westus2",
            "name": "ntier-iaas-web-nsg",
            "resource_group_name": "ntier-iaas-rg",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_gateway_65k_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "65200-65535",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-appgw-nsg/securityRules/65k-Allow",
            "name": "65k-Allow",
            "network_security_group_name": "ntier-iaas-appgw-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "ntier-iaas-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.appgw_nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jumpbox_ssh_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-jumpbox-nsg/securityRules/SSH-Allow",
            "name": "SSH-Allow",
            "network_security_group_name": "ntier-iaas-jumpbox-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "ntier-iaas-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.jumpbox_nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.9.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ApplicationGatewaySubnet",
            "name": "ApplicationGatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ntier-iaas-rg",
            "virtual_network_name": "ntier-iaas-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "business_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.9.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-BusinessSubnet",
            "name": "ntier-iaas-BusinessSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ntier-iaas-rg",
            "virtual_network_name": "ntier-iaas-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "data_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.9.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-DataSubnet",
            "name": "ntier-iaas-DataSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ntier-iaas-rg",
            "virtual_network_name": "ntier-iaas-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jumpbox_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.9.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-JumpboxSubnet",
            "name": "ntier-iaas-JumpboxSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ntier-iaas-rg",
            "virtual_network_name": "ntier-iaas-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.9.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-WebSubnet",
            "name": "ntier-iaas-WebSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ntier-iaas-rg",
            "virtual_network_name": "ntier-iaas-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "appgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ApplicationGatewaySubnet",
            "network_security_group_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-appgw-nsg",
            "subnet_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ApplicationGatewaySubnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.appgw_nsg",
            "module.network.azurerm_subnet.appgw_subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "business_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-BusinessSubnet",
            "network_security_group_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-business-nsg",
            "subnet_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-BusinessSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.business_nsg",
            "module.network.azurerm_subnet.business_subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "data_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-DataSubnet",
            "network_security_group_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-data-nsg",
            "subnet_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-DataSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.data_nsg",
            "module.network.azurerm_subnet.data_subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "jumpbox_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-JumpboxSubnet",
            "network_security_group_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-jumpbox-nsg",
            "subnet_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-JumpboxSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.jumpbox_nsg",
            "module.network.azurerm_subnet.jumpbox_subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-WebSubnet",
            "network_security_group_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-web-nsg",
            "subnet_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-WebSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_network_security_group.web_nsg",
            "module.network.azurerm_subnet.web_subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.9.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4069b1da-d9dc-4771-9f54-8a2e04bee0c5",
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet",
            "location": "westus2",
            "name": "ntier-iaas-vnet",
            "resource_group_name": "ntier-iaas-rg",
            "subnet": [
              {
                "address_prefix": "10.9.0.0/24",
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-JumpboxSubnet",
                "name": "ntier-iaas-JumpboxSubnet",
                "security_group": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-jumpbox-nsg"
              },
              {
                "address_prefix": "10.9.1.0/24",
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ApplicationGatewaySubnet",
                "name": "ApplicationGatewaySubnet",
                "security_group": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-appgw-nsg"
              },
              {
                "address_prefix": "10.9.2.0/24",
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-WebSubnet",
                "name": "ntier-iaas-WebSubnet",
                "security_group": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-web-nsg"
              },
              {
                "address_prefix": "10.9.3.0/24",
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-BusinessSubnet",
                "name": "ntier-iaas-BusinessSubnet",
                "security_group": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-business-nsg"
              },
              {
                "address_prefix": "10.9.4.0/24",
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ntier-iaas-DataSubnet",
                "name": "ntier-iaas-DataSubnet",
                "security_group": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/networkSecurityGroups/ntier-iaas-data-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.web_tier",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/backendAddressPools/myBackendPool",
                "ip_addresses": [],
                "name": "myBackendPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/backendHttpSettingsCollection/myHTTPsetting",
                "name": "myHTTPsetting",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/frontendIPConfigurations/myAGIPConfig",
                "name": "myAGIPConfig",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/publicIPAddresses/ntier-iaas-appgw-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/frontendPorts/myFrontendPort",
                "name": "myFrontendPort",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/gatewayIPConfigurations/ntier-iaas-appgw-ipconfig",
                "name": "ntier-iaas-appgw-ipconfig",
                "subnet_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/virtualNetworks/ntier-iaas-vnet/subnets/ApplicationGatewaySubnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/frontendIPConfigurations/myAGIPConfig",
                "frontend_ip_configuration_name": "myAGIPConfig",
                "frontend_port_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/frontendPorts/myFrontendPort",
                "frontend_port_name": "myFrontendPort",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/httpListeners/myListener",
                "name": "myListener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw",
            "identity": [],
            "location": "westus2",
            "name": "ntier-iaas-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/backendAddressPools/myBackendPool",
                "backend_address_pool_name": "myBackendPool",
                "backend_http_settings_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/backendHttpSettingsCollection/myHTTPsetting",
                "backend_http_settings_name": "myHTTPsetting",
                "http_listener_id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/httpListeners/myListener",
                "http_listener_name": "myListener",
                "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/applicationGateways/ntier-iaas-appgw/requestRoutingRules/myRoutingRule",
                "name": "myRoutingRule",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "ntier-iaas-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network.azurerm_subnet.appgw_subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.web_tier.azurerm_public_ip.appgw_pip"
          ]
        }
      ]
    },
    {
      "module": "module.web_tier",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f5cdbf92-abd6-4e78-ad23-e0593e9536e6/resourceGroups/ntier-iaas-rg/providers/Microsoft.Network/publicIPAddresses/ntier-iaas-appgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.236.3.0",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "ntier-iaas-appgw-pip",
            "resource_group_name": "ntier-iaas-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}